Fixing datepicker overflow issue

--- a/client/src/components/Post/style.css
+++ b/client/src/components/Post/style.css
@@ -10,7 +10,6 @@
   flex: 1;
   display: flex;
   width: 100%;
-  height: 100%;
 
   box-sizing: border-box;
 }
@@ -26,6 +25,7 @@
 
   box-sizing: border-box;
   overflow: auto;
+  clear: both;
 }
 
 .posting-textarea {
